# market-macro-lakehouse

./: LICENSE  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
dashboards/: README.md  market_macro_overview.lvdash.json
dashboards/queries/: 01_pipeline_freshness.sql  02_pipeline_recent_runs.sql  03_crypto_market_snapshot.sql  04_macro_indicator_latest.sql  05_cross_feature_snapshot.sql  06_btc_macro_dual_axis_timeseries.sql  07_crypto_fx_volatility_compare.sql  08_crypto_macro_correlation_heatmap.sql  09_latest_btc_macro_correlation_snapshot.sql  10_top_crypto_movers.sql  11_latest_macro_signals.sql
docs/: architecture.md  dashboard.md  job-operations.md  phase1.md  runbook.md
docs/assets/: market_macro_architecture.drawio
notebooks/: 00_platform_setup_catalog_schema.ipynb  10_direct_bronze_market_crypto_ingest.ipynb  11_bronze_ecb_ingest.ipynb  12_bronze_fred_ingest.ipynb  20_direct_silver_market_crypto_ohlc_1d.ipynb  22_silver_macro_transform.ipynb  30_direct_gold_market_crypto_returns_volatility_1d.ipynb  32_gold_macro_indicators.ipynb  40_direct_gold_cross_crypto_macro_features_1d.ipynb  70_pipeline_observability_metrics.ipynb
resources/: dashboards.yml  jobs.yml
src/lakehouse/: __init__.py  observability.py
src/lakehouse/common/: __init__.py  models.py  runtime.py
src/lakehouse/sources/: ecb.py  (+4 more)
tests/unit/: test_bundle_assets.py  test_coinbase_source.py  test_dashboard_assets.py  test_ecb_source.py  test_fred_source.py  test_gold_rules.py  test_observability.py  test_runtime.py  test_serverless_compat.py  test_silver_rules.py
(+5 files in other folders)
