[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-macro-lakehouse"
version = "0.1.0"
description = "Phase-1 Databricks Bronze ingestion skeleton."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
